# speech-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/agents/: spec-architect.md
docs/: cli-architecture.md  elevenlabs-sdk-features.md  sdk-introspection-quick-reference.md  sdk-methods.json
docs/specs/: elevenlabs-transcription-cli-spec.md  side-by-side-spec.md
runs/2026-02-10T21-05-13_list-providers/: metadata.json
runs/2026-02-10T21-06-26_jfk/: metadata.json
runs/2026-02-10T21-06-26_jfk/output/: whisper-cpp_ggml-tiny-en.json
scripts/: README.md  example_cli_generator.py  inspect_sdk.py  verify_sdk_data.py
src/speech_cli/: __init__.py  __main__.py  cli.py  cli_generator.py  client.py  config.py  constants.py  errors.py  formatters.py  output_formatters.py  parameter_handlers.py  transcribe.py  validators.py
src/speech_cli/eval/: __init__.py  cli_eval.py  runner.py
src/speech_cli/eval/audio/: __init__.py  chunked_adapter.py  convert.py  recorder.py
src/speech_cli/eval/display/: __init__.py  layouts.py  live_display.py
src/speech_cli/eval/providers/: __init__.py  base.py  elevenlabs_provider.py  groq_provider.py  huggingface_provider.py  mistral_provider.py  registry.py  whisper_cpp.py
tests/: __init__.py  test_cli.py  test_config.py  test_formatters.py  test_validators.py
tests/test_eval/: test_audio_convert.py  test_chunked_adapter.py  test_cli_eval.py  test_cloud_providers.py  test_display.py  test_providers_base.py  test_recorder.py  test_registry.py  test_runner.py  test_storage.py  test_whisper_cpp.py
(+3 files in other folders)
