[project]
name = "speech-cli"
version = "0.1.0"
description = "A command-line tool for transcribing audio files using the ElevenLabs API"
readme = "README.md"
authors = [
    { name = "Maurice", email = "mbanerjeepalmer@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "elevenlabs>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
speech-cli = "speech_cli.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
